snapshots/care/data4life/hc-result-sdk-kmp/error/9d7a4ed/error-9d7a4ed.module.sha512
a38dcb91b85bcc675e81ce03bbe80de87f2a0cd3d5e1f67a81becaa126689abcf214dae617854739b25144caf5380392c318355ca2e68f34add71e6b748087fb